--- a/data/clean_data.ipynb
+++ b/data/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -143,11 +143,12 @@
       "Missing values after handling in column 'pitcher_name': 0\n",
       "Dropped 7454 rows for column 'events' due to drop values\n",
       "Dropped 6355 rows for column 'pitch_type' due to drop values\n",
+      "Dropped 24 rows for column 'balls' due to drop values\n",
       "Dropped 1 rows for column 'strikes' due to drop values\n",
-      "Processed Data Shape after convert_data_types: (6542490, 38)\n",
-      "Processed Data Shape after standardize_or_normalize: (6542490, 38)\n",
-      "Processed Data Shape after one_hot_encode: (6542490, 94)\n",
-      "New Data Shape: (6542490, 94)\n"
+      "Processed Data Shape after convert_data_types: (6542466, 38)\n",
+      "Processed Data Shape after standardize_or_normalize: (6542466, 38)\n",
+      "Processed Data Shape after one_hot_encode: (6542466, 93)\n",
+      "New Data Shape: (6542466, 93)\n"
      ]
     },
     {
@@ -182,10 +183,10 @@
        "      <th>pfx_x</th>\n",
        "      <th>pfx_z</th>\n",
        "      <th>...</th>\n",
+       "      <th>balls_0</th>\n",
        "      <th>balls_1</th>\n",
        "      <th>balls_2</th>\n",
        "      <th>balls_3</th>\n",
-       "      <th>balls_4</th>\n",
        "      <th>strikes_0</th>\n",
        "      <th>strikes_1</th>\n",
        "      <th>strikes_2</th>\n",
@@ -198,18 +199,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>6</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2024-06-30</td>\n",
-       "      <td>-1.062970</td>\n",
-       "      <td>-1.498509</td>\n",
+       "      <td>-1.062971</td>\n",
+       "      <td>-1.498508</td>\n",
        "      <td>-2.803610</td>\n",
        "      <td>680869</td>\n",
        "      <td>623149</td>\n",
-       "      <td>1.591075</td>\n",
-       "      <td>-0.006400</td>\n",
+       "      <td>1.591076</td>\n",
+       "      <td>-0.006398</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -222,18 +223,18 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
-       "      <td>0.581621</td>\n",
+       "      <td>0.581623</td>\n",
        "      <td>2024-06-30</td>\n",
-       "      <td>-1.096181</td>\n",
-       "      <td>-1.535435</td>\n",
+       "      <td>-1.096183</td>\n",
+       "      <td>-1.535434</td>\n",
        "      <td>-2.938090</td>\n",
        "      <td>680869</td>\n",
        "      <td>623149</td>\n",
-       "      <td>1.568450</td>\n",
-       "      <td>-0.073376</td>\n",
+       "      <td>1.568452</td>\n",
+       "      <td>-0.073374</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -246,18 +247,18 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4</td>\n",
-       "      <td>-2.136103</td>\n",
+       "      <td>-2.136104</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>0.331898</td>\n",
-       "      <td>-1.456308</td>\n",
+       "      <td>-1.456307</td>\n",
        "      <td>-2.573073</td>\n",
        "      <td>680869</td>\n",
        "      <td>623149</td>\n",
        "      <td>-0.773200</td>\n",
-       "      <td>0.810711</td>\n",
+       "      <td>0.810712</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -270,17 +271,17 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2024-06-30</td>\n",
-       "      <td>-0.896914</td>\n",
-       "      <td>-1.503784</td>\n",
+       "      <td>-0.896915</td>\n",
+       "      <td>-1.503783</td>\n",
        "      <td>-2.842033</td>\n",
        "      <td>680869</td>\n",
        "      <td>623149</td>\n",
-       "      <td>1.783385</td>\n",
-       "      <td>0.207924</td>\n",
+       "      <td>1.783386</td>\n",
+       "      <td>0.207926</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -294,17 +295,17 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.693820</td>\n",
+       "      <td>0.693822</td>\n",
        "      <td>2024-06-30</td>\n",
-       "      <td>0.182447</td>\n",
-       "      <td>-1.445758</td>\n",
+       "      <td>0.182448</td>\n",
+       "      <td>-1.445757</td>\n",
        "      <td>-2.745976</td>\n",
        "      <td>680869</td>\n",
        "      <td>623149</td>\n",
        "      <td>-0.626140</td>\n",
-       "      <td>0.382063</td>\n",
+       "      <td>0.382064</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -342,18 +343,18 @@
        "    <tr>\n",
        "      <th>6653221</th>\n",
        "      <td>5</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2015-04-05</td>\n",
-       "      <td>-2.142332</td>\n",
-       "      <td>1.698224</td>\n",
-       "      <td>-0.690351</td>\n",
+       "      <td>-2.142335</td>\n",
+       "      <td>1.698226</td>\n",
+       "      <td>-0.690352</td>\n",
        "      <td>572761</td>\n",
        "      <td>452657</td>\n",
-       "      <td>-1.485876</td>\n",
-       "      <td>-1.158392</td>\n",
+       "      <td>-1.485877</td>\n",
+       "      <td>-1.158390</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -366,17 +367,17 @@
        "    <tr>\n",
        "      <th>6653222</th>\n",
        "      <td>4</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2015-04-05</td>\n",
-       "      <td>0.464742</td>\n",
-       "      <td>1.761525</td>\n",
+       "      <td>0.464743</td>\n",
+       "      <td>1.761528</td>\n",
        "      <td>-0.882466</td>\n",
        "      <td>572761</td>\n",
        "      <td>452657</td>\n",
        "      <td>0.177035</td>\n",
-       "      <td>0.301691</td>\n",
+       "      <td>0.301693</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -390,17 +391,17 @@
        "    <tr>\n",
        "      <th>6653223</th>\n",
        "      <td>3</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2015-04-05</td>\n",
-       "      <td>0.996120</td>\n",
-       "      <td>1.708774</td>\n",
+       "      <td>0.996121</td>\n",
+       "      <td>1.708776</td>\n",
        "      <td>-0.882466</td>\n",
        "      <td>572761</td>\n",
        "      <td>452657</td>\n",
-       "      <td>1.229081</td>\n",
-       "      <td>1.266150</td>\n",
+       "      <td>1.229082</td>\n",
+       "      <td>1.266151</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -414,17 +415,17 @@
        "    <tr>\n",
        "      <th>6653224</th>\n",
        "      <td>2</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2015-04-05</td>\n",
-       "      <td>0.763642</td>\n",
-       "      <td>1.682398</td>\n",
-       "      <td>-0.728774</td>\n",
+       "      <td>0.763643</td>\n",
+       "      <td>1.682400</td>\n",
+       "      <td>-0.728775</td>\n",
        "      <td>572761</td>\n",
        "      <td>452657</td>\n",
-       "      <td>1.070708</td>\n",
-       "      <td>1.426893</td>\n",
+       "      <td>1.070709</td>\n",
+       "      <td>1.426894</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -438,17 +439,17 @@
        "    <tr>\n",
        "      <th>6653225</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.002705</td>\n",
+       "      <td>-0.002704</td>\n",
        "      <td>2015-04-05</td>\n",
-       "      <td>0.796853</td>\n",
-       "      <td>1.735150</td>\n",
-       "      <td>-0.863254</td>\n",
+       "      <td>0.796854</td>\n",
+       "      <td>1.735152</td>\n",
+       "      <td>-0.863255</td>\n",
        "      <td>572761</td>\n",
        "      <td>452657</td>\n",
-       "      <td>0.708714</td>\n",
-       "      <td>1.266150</td>\n",
+       "      <td>0.708715</td>\n",
+       "      <td>1.266151</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -461,44 +462,44 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6542490 rows × 94 columns</p>\n",
+       "<p>6542466 rows × 93 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         pitch_number  launch_speed  game_date  release_speed  release_pos_x  \\\n",
-       "0                   6     -0.002705 2024-06-30      -1.062970      -1.498509   \n",
-       "1                   5      0.581621 2024-06-30      -1.096181      -1.535435   \n",
-       "2                   4     -2.136103 2024-06-30       0.331898      -1.456308   \n",
-       "3                   3     -0.002705 2024-06-30      -0.896914      -1.503784   \n",
-       "4                   2      0.693820 2024-06-30       0.182447      -1.445758   \n",
+       "0                   6     -0.002704 2024-06-30      -1.062971      -1.498508   \n",
+       "1                   5      0.581623 2024-06-30      -1.096183      -1.535434   \n",
+       "2                   4     -2.136104 2024-06-30       0.331898      -1.456307   \n",
+       "3                   3     -0.002704 2024-06-30      -0.896915      -1.503783   \n",
+       "4                   2      0.693822 2024-06-30       0.182448      -1.445757   \n",
        "...               ...           ...        ...            ...            ...   \n",
-       "6653221             5     -0.002705 2015-04-05      -2.142332       1.698224   \n",
-       "6653222             4     -0.002705 2015-04-05       0.464742       1.761525   \n",
-       "6653223             3     -0.002705 2015-04-05       0.996120       1.708774   \n",
-       "6653224             2     -0.002705 2015-04-05       0.763642       1.682398   \n",
-       "6653225             1     -0.002705 2015-04-05       0.796853       1.735150   \n",
+       "6653221             5     -0.002704 2015-04-05      -2.142335       1.698226   \n",
+       "6653222             4     -0.002704 2015-04-05       0.464743       1.761528   \n",
+       "6653223             3     -0.002704 2015-04-05       0.996121       1.708776   \n",
+       "6653224             2     -0.002704 2015-04-05       0.763643       1.682400   \n",
+       "6653225             1     -0.002704 2015-04-05       0.796854       1.735152   \n",
        "\n",
-       "         release_pos_z  batter  pitcher     pfx_x     pfx_z  ...  balls_1  \\\n",
-       "0            -2.803610  680869   623149  1.591075 -0.006400  ...     True   \n",
-       "1            -2.938090  680869   623149  1.568450 -0.073376  ...     True   \n",
-       "2            -2.573073  680869   623149 -0.773200  0.810711  ...     True   \n",
-       "3            -2.842033  680869   623149  1.783385  0.207924  ...    False   \n",
-       "4            -2.745976  680869   623149 -0.626140  0.382063  ...    False   \n",
+       "         release_pos_z  batter  pitcher     pfx_x     pfx_z  ...  balls_0  \\\n",
+       "0            -2.803610  680869   623149  1.591076 -0.006398  ...    False   \n",
+       "1            -2.938090  680869   623149  1.568452 -0.073374  ...    False   \n",
+       "2            -2.573073  680869   623149 -0.773200  0.810712  ...    False   \n",
+       "3            -2.842033  680869   623149  1.783386  0.207926  ...     True   \n",
+       "4            -2.745976  680869   623149 -0.626140  0.382064  ...     True   \n",
        "...                ...     ...      ...       ...       ...  ...      ...   \n",
-       "6653221      -0.690351  572761   452657 -1.485876 -1.158392  ...     True   \n",
-       "6653222      -0.882466  572761   452657  0.177035  0.301691  ...    False   \n",
-       "6653223      -0.882466  572761   452657  1.229081  1.266150  ...    False   \n",
-       "6653224      -0.728774  572761   452657  1.070708  1.426893  ...    False   \n",
-       "6653225      -0.863254  572761   452657  0.708714  1.266150  ...    False   \n",
+       "6653221      -0.690352  572761   452657 -1.485877 -1.158390  ...    False   \n",
+       "6653222      -0.882466  572761   452657  0.177035  0.301693  ...     True   \n",
+       "6653223      -0.882466  572761   452657  1.229082  1.266151  ...     True   \n",
+       "6653224      -0.728775  572761   452657  1.070709  1.426894  ...     True   \n",
+       "6653225      -0.863255  572761   452657  0.708715  1.266151  ...     True   \n",
        "\n",
-       "         balls_2  balls_3  balls_4  strikes_0  strikes_1  strikes_2  \\\n",
-       "0          False    False    False      False      False       True   \n",
-       "1          False    False    False      False      False       True   \n",
-       "2          False    False    False      False      False       True   \n",
+       "         balls_1  balls_2  balls_3  strikes_0  strikes_1  strikes_2  \\\n",
+       "0           True    False    False      False      False       True   \n",
+       "1           True    False    False      False      False       True   \n",
+       "2           True    False    False      False      False       True   \n",
        "3          False    False    False      False      False       True   \n",
        "4          False    False    False      False       True      False   \n",
        "...          ...      ...      ...        ...        ...        ...   \n",
-       "6653221    False    False    False      False      False       True   \n",
+       "6653221     True    False    False      False      False       True   \n",
        "6653222    False    False    False      False      False       True   \n",
        "6653223    False    False    False      False      False       True   \n",
        "6653224    False    False    False      False       True      False   \n",
@@ -517,10 +518,10 @@
        "6653224            True           False           False  \n",
        "6653225            True           False           False  \n",
        "\n",
-       "[6542490 rows x 94 columns]"
+       "[6542466 rows x 93 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,16 +532,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_proc.processed_data.to_csv('full_cleaned_94', index=False)"
+    "t_proc.processed_data.to_csv('full_cleaned_94.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
