--- a/Models/Notebooks/temp.ipynb
+++ b/Models/Notebooks/temp.ipynb
@@ -86,32 +86,541 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "import sys\n",
+    "sys.path.append('../../')\n",
+    "from DataProc.DataProcessor import DataProcessor\n",
+    "from Datasets.BaseballDataset import BaseballDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "med = pd.read_csv('../../data/med_train_94.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pitch_number</th>\n",
+       "      <th>launch_speed</th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>release_pos_x</th>\n",
+       "      <th>release_pos_z</th>\n",
+       "      <th>batter</th>\n",
+       "      <th>pitcher</th>\n",
+       "      <th>pfx_x</th>\n",
+       "      <th>pfx_z</th>\n",
+       "      <th>...</th>\n",
+       "      <th>balls_0</th>\n",
+       "      <th>balls_1</th>\n",
+       "      <th>balls_2</th>\n",
+       "      <th>balls_3</th>\n",
+       "      <th>strikes_0</th>\n",
+       "      <th>strikes_1</th>\n",
+       "      <th>strikes_2</th>\n",
+       "      <th>outs_when_up_0</th>\n",
+       "      <th>outs_when_up_1</th>\n",
+       "      <th>outs_when_up_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1.413039</td>\n",
+       "      <td>2017-08-07</td>\n",
+       "      <td>1.178783</td>\n",
+       "      <td>-0.564809</td>\n",
+       "      <td>-0.632717</td>\n",
+       "      <td>460086</td>\n",
+       "      <td>592815</td>\n",
+       "      <td>-1.101258</td>\n",
+       "      <td>0.221321</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-08-07</td>\n",
+       "      <td>-0.149664</td>\n",
+       "      <td>-0.638660</td>\n",
+       "      <td>-1.055369</td>\n",
+       "      <td>460086</td>\n",
+       "      <td>592815</td>\n",
+       "      <td>-0.218896</td>\n",
+       "      <td>-1.278947</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.403242</td>\n",
+       "      <td>2017-08-07</td>\n",
+       "      <td>1.128966</td>\n",
+       "      <td>-0.533158</td>\n",
+       "      <td>-0.248489</td>\n",
+       "      <td>460086</td>\n",
+       "      <td>592815</td>\n",
+       "      <td>-1.372753</td>\n",
+       "      <td>0.542807</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-08-07</td>\n",
+       "      <td>-1.511322</td>\n",
+       "      <td>-0.654486</td>\n",
+       "      <td>-0.786409</td>\n",
+       "      <td>444876</td>\n",
+       "      <td>592815</td>\n",
+       "      <td>0.720027</td>\n",
+       "      <td>-2.216615</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-08-07</td>\n",
+       "      <td>1.261811</td>\n",
+       "      <td>-0.612285</td>\n",
+       "      <td>-0.555872</td>\n",
+       "      <td>444876</td>\n",
+       "      <td>592815</td>\n",
+       "      <td>-1.157819</td>\n",
+       "      <td>0.489226</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492987</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>1.593923</td>\n",
+       "      <td>-0.232475</td>\n",
+       "      <td>-1.401175</td>\n",
+       "      <td>592178</td>\n",
+       "      <td>593372</td>\n",
+       "      <td>-1.304879</td>\n",
+       "      <td>0.020392</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492988</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.603887</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>-0.697648</td>\n",
+       "      <td>-0.243025</td>\n",
+       "      <td>-0.940100</td>\n",
+       "      <td>656941</td>\n",
+       "      <td>593372</td>\n",
+       "      <td>1.387454</td>\n",
+       "      <td>-1.118204</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492989</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>1.411261</td>\n",
+       "      <td>-0.279951</td>\n",
+       "      <td>-1.343541</td>\n",
+       "      <td>656941</td>\n",
+       "      <td>593372</td>\n",
+       "      <td>-1.372753</td>\n",
+       "      <td>-0.153746</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492990</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>1.178783</td>\n",
+       "      <td>-0.274676</td>\n",
+       "      <td>-0.767197</td>\n",
+       "      <td>656941</td>\n",
+       "      <td>593372</td>\n",
+       "      <td>-1.655562</td>\n",
+       "      <td>0.234716</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492991</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.002704</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>1.012727</td>\n",
+       "      <td>-0.285226</td>\n",
+       "      <td>-0.555872</td>\n",
+       "      <td>656941</td>\n",
+       "      <td>593372</td>\n",
+       "      <td>-0.739263</td>\n",
+       "      <td>0.582993</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>492992 rows × 93 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pitch_number  launch_speed   game_date  release_speed  release_pos_x  \\\n",
+       "0                  3     -1.413039  2017-08-07       1.178783      -0.564809   \n",
+       "1                  2     -0.002704  2017-08-07      -0.149664      -0.638660   \n",
+       "2                  1     -0.403242  2017-08-07       1.128966      -0.533158   \n",
+       "3                  5     -0.002704  2017-08-07      -1.511322      -0.654486   \n",
+       "4                  4     -0.002704  2017-08-07       1.261811      -0.612285   \n",
+       "...              ...           ...         ...            ...            ...   \n",
+       "492987             1     -0.002704  2017-04-02       1.593923      -0.232475   \n",
+       "492988             4      1.603887  2017-04-02      -0.697648      -0.243025   \n",
+       "492989             3     -0.002704  2017-04-02       1.411261      -0.279951   \n",
+       "492990             2     -0.002704  2017-04-02       1.178783      -0.274676   \n",
+       "492991             1     -0.002704  2017-04-02       1.012727      -0.285226   \n",
+       "\n",
+       "        release_pos_z  batter  pitcher     pfx_x     pfx_z  ...  balls_0  \\\n",
+       "0           -0.632717  460086   592815 -1.101258  0.221321  ...     True   \n",
+       "1           -1.055369  460086   592815 -0.218896 -1.278947  ...     True   \n",
+       "2           -0.248489  460086   592815 -1.372753  0.542807  ...     True   \n",
+       "3           -0.786409  444876   592815  0.720027 -2.216615  ...    False   \n",
+       "4           -0.555872  444876   592815 -1.157819  0.489226  ...     True   \n",
+       "...               ...     ...      ...       ...       ...  ...      ...   \n",
+       "492987      -1.401175  592178   593372 -1.304879  0.020392  ...     True   \n",
+       "492988      -0.940100  656941   593372  1.387454 -1.118204  ...    False   \n",
+       "492989      -1.343541  656941   593372 -1.372753 -0.153746  ...    False   \n",
+       "492990      -0.767197  656941   593372 -1.655562  0.234716  ...    False   \n",
+       "492991      -0.555872  656941   593372 -0.739263  0.582993  ...     True   \n",
+       "\n",
+       "        balls_1  balls_2  balls_3  strikes_0  strikes_1  strikes_2  \\\n",
+       "0         False    False    False      False      False       True   \n",
+       "1         False    False    False      False       True      False   \n",
+       "2         False    False    False       True      False      False   \n",
+       "3          True    False    False      False      False       True   \n",
+       "4         False    False    False      False      False       True   \n",
+       "...         ...      ...      ...        ...        ...        ...   \n",
+       "492987    False    False    False       True      False      False   \n",
+       "492988    False     True    False      False       True      False   \n",
+       "492989     True    False    False      False       True      False   \n",
+       "492990     True    False    False       True      False      False   \n",
+       "492991    False    False    False       True      False      False   \n",
+       "\n",
+       "        outs_when_up_0  outs_when_up_1  outs_when_up_2  \n",
+       "0                False           False            True  \n",
+       "1                False           False            True  \n",
+       "2                False           False            True  \n",
+       "3                False            True           False  \n",
+       "4                False            True           False  \n",
+       "...                ...             ...             ...  \n",
+       "492987            True           False           False  \n",
+       "492988            True           False           False  \n",
+       "492989            True           False           False  \n",
+       "492990            True           False           False  \n",
+       "492991            True           False           False  \n",
+       "\n",
+       "[492992 rows x 93 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "count = 0\n",
-    "\n",
-    "while count < 10:\n",
-    "    print(count)\n",
-    "    count = count + 1"
+    "med"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(492992, 93)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "med.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pitch_number', 'launch_speed', 'game_date', 'release_speed',\n",
+       "       'release_pos_x', 'release_pos_z', 'batter', 'pitcher', 'pfx_x', 'pfx_z',\n",
+       "       'plate_x', 'plate_z', 'hc_x', 'hc_y', 'vy0', 'vz0', 'ax', 'ay', 'az',\n",
+       "       'sz_top', 'sz_bot', 'launch_angle', 'release_spin_rate',\n",
+       "       'release_extension', 'game_pk', 'release_pos_y', 'at_bat_number',\n",
+       "       'batter_name', 'pitcher_name', 'events_B', 'events_S', 'events_double',\n",
+       "       'events_field_out', 'events_hit_by_pitch', 'events_home_run',\n",
+       "       'events_single', 'events_strikeout', 'events_triple', 'events_walk',\n",
+       "       'zone_1.0', 'zone_2.0', 'zone_3.0', 'zone_4.0', 'zone_5.0', 'zone_6.0',\n",
+       "       'zone_7.0', 'zone_8.0', 'zone_9.0', 'zone_11.0', 'zone_12.0',\n",
+       "       'zone_13.0', 'zone_14.0', 'pitch_type_CH', 'pitch_type_CS',\n",
+       "       'pitch_type_CU', 'pitch_type_EP', 'pitch_type_FA', 'pitch_type_FC',\n",
+       "       'pitch_type_FF', 'pitch_type_FO', 'pitch_type_FS', 'pitch_type_KC',\n",
+       "       'pitch_type_KN', 'pitch_type_PO', 'pitch_type_SC', 'pitch_type_SI',\n",
+       "       'pitch_type_SL', 'pitch_type_ST', 'pitch_type_SV', 'stand_L', 'stand_R',\n",
+       "       'p_throws_L', 'p_throws_R', 'hit_location_0.0', 'hit_location_1.0',\n",
+       "       'hit_location_2.0', 'hit_location_3.0', 'hit_location_4.0',\n",
+       "       'hit_location_5.0', 'hit_location_6.0', 'hit_location_7.0',\n",
+       "       'hit_location_8.0', 'hit_location_9.0', 'balls_0', 'balls_1', 'balls_2',\n",
+       "       'balls_3', 'strikes_0', 'strikes_1', 'strikes_2', 'outs_when_up_0',\n",
+       "       'outs_when_up_1', 'outs_when_up_2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "med.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = BaseballDataset(med, \"../../data/configv3.json\", 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  8,  9, 17, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 65, 66, 67, 68,\n",
+       "        69, 70, 71, 72, 73, 74, 85, 86])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.label_and_mask_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['events', 'launch_speed', 'hit_location', 'hc_x', 'hc_y', 'launch_angle']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.label_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([21, 22, 23, 24, 25, 26, 27, 28, 29, 30]),\n",
+       " tensor([65, 66, 67, 68, 69, 70, 71, 72, 73, 74])]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.categorical_label_indices"
    ]
   }
  ],
